--- a/src/app/pages/admin/origin-cisi/origin-cisi-detail/origin-cisi-detail.component.html
+++ b/src/app/pages/admin/origin-cisi/origin-cisi-detail/origin-cisi-detail.component.html
@@ -1,26 +1,28 @@
 <nb-card>
-  <nb-card-body>
-      <form [formGroup]="form">
-          <div class="row">
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="detail"
-                          placeholder="Clave del transferente"
-                          [status]="(detail?.errors?.required || detail?.hasError('minlength') || detail?.hasError('maxlength') || detail?.hasError('pattern')) && detail.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Clave del transferente" [showMinLength]="detail?.hasError('minlength')"
-                          [showMaxLength]="detail?.hasError('maxlength')"
-                          [showRequired]="detail?.errors?.required && detail.touched"
-                          [showPattern]="detail?.hasError('pattern') && detail.touched" minLength=1 maxLength=255>
-                      </ngx-validation-message>
-                  </div>
-              </div>
-              <div class="form-group">
+    <nb-card-body>
+        <form [formGroup]="form">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input type="text" nbInput fullWidth class="form-control" formControlName="detail"
+                            placeholder="Clave del transferente"
+                            [status]="(detail?.errors?.required || detail?.hasError('minlength') || detail?.hasError('maxlength') || detail?.hasError('pattern')) && detail.touched ? 'danger' : ''">
+                        <ngx-validation-message label="Clave del transferente"
+                            [showMinLength]="detail?.hasError('minlength')"
+                            [showMaxLength]="detail?.hasError('maxlength')"
+                            [showRequired]="detail?.errors?.required && detail.touched"
+                            [showPattern]="detail?.hasError('pattern') && detail.touched" minLength=1 maxLength=40>
+                        </ngx-validation-message>
+                    </div>
+                </div>
+
+            </div>
+            <div class="form-group">
                 <div class="d-flex justify-content-center">
                     <button type="submit" nbButton status="primary" [disabled]="!form.valid"
                         (click)="register()">{{actionBtn}}</button>
                 </div>
             </div>
-          </div>   
         </form>
     </nb-card-body>
-  </nb-card>
+</nb-card>
