--- a/src/app/pages/admin/battery/battery-detail/battery-detail.component.html
+++ b/src/app/pages/admin/battery/battery-detail/battery-detail.component.html
@@ -3,19 +3,30 @@
         <form [formGroup]="form">
 
             <div class="form-group">
-                <input type="text" nbInput fullWidth formControlName="storeCode"
-                  placeholder="CVE"
+                <input type="text" nbInput fullWidth formControlName="storeDesc"
+                  placeholder="Almacen"
                   [nbAutocomplete]="auto"
-                  [status]="(storeCode?.hasError('pattern') ) ? 'danger' : ''"
+                  [status]="(storeDesc?.hasError('pattern') ) ? 'danger' : ''"
                 />
                 <nb-autocomplete #auto [activeFirst]="false"
                   (selectedChange)="onSelectionChange($event)">
                   <nb-option *ngFor="let option of filteredOptions$ | async" [value]="option">
-                    {{ option.storeDesc }}
+                    {{ option.description }}
                   </nb-option>
                 </nb-autocomplete>
-                <ngx-validation-message label="CVE" 
-                  [showPattern]="storeCode?.hasError('pattern')">
+                <ngx-validation-message label="Almacen" 
+                  [showPattern]="storeDesc?.hasError('pattern')">
+                </ngx-validation-message>
+            </div>
+
+            <div class="form-group row">
+                <input type="number" nbInput fullWidth formControlName="idBattery"
+                    placeholder="ID Bateria"
+                    [status]="(idBattery?.errors?.required || idBattery?.hasError('minlength') || idBattery?.hasError('maxlength') || idBattery?.hasError('pattern')) && idBattery.touched ? 'danger' : ''">
+                <ngx-validation-message label="ID Bateria" [showMinLength]="idBattery?.hasError('minlength')"
+                    [showMaxLength]="idBattery?.hasError('maxlength')"
+                    [showRequired]="idBattery?.errors?.required && idBattery.touched"
+                    [showPattern]="idBattery?.hasError('pattern') && idBattery.touched" minLength=1 maxLength=255>
                 </ngx-validation-message>
             </div>
 
