--- a/src/app/pages/executive-processes/inf-a-insured-seizures-aband/inf-a-insured-seizures-aband-list/inf-a-insured-seizures-aband-list.component.html
+++ b/src/app/pages/executive-processes/inf-a-insured-seizures-aband/inf-a-insured-seizures-aband-list/inf-a-insured-seizures-aband-list.component.html
@@ -71,7 +71,7 @@
                   <label class="label">Fecha recepción del:</label>
                   
                     <input nbInput
-                           placeholder="Form Picker"
+                           placeholder="Selección de fecha"
                            [nbDatepicker]="formpicker">
                     <nb-datepicker #formpicker></nb-datepicker>
                   
@@ -83,7 +83,7 @@
                   <label class="label">Al</label>
                   
                     <input nbInput
-                           placeholder="Form Picker"
+                           placeholder="Selección de fecha"
                            [nbDatepicker]="formpicker2">
                     <nb-datepicker #formpicker2></nb-datepicker>
                   
