--- a/src/app/pages/executive-processes/total-doc-received/total-doc-received-list/total-doc-received-list.component.html
+++ b/src/app/pages/executive-processes/total-doc-received/total-doc-received-list/total-doc-received-list.component.html
@@ -24,7 +24,7 @@
                 <label class="label">Fecha recepción del:</label>
                 
                   <input nbInput
-                         placeholder="Form Picker"
+                         placeholder="Selección de fecha"
                          [nbDatepicker]="formpicker">
                   <nb-datepicker #formpicker></nb-datepicker>
                 
@@ -36,7 +36,7 @@
                 <label class="label">Al</label>
                 
                   <input nbInput
-                         placeholder="Form Picker"
+                         placeholder="Selección de fecha"
                          [nbDatepicker]="formpicker2">
                   <nb-datepicker #formpicker2></nb-datepicker>
                 
