--- a/src/app/pages/admin/departament/departament-detail/departament-detail.component.html
+++ b/src/app/pages/admin/departament/departament-detail/departament-detail.component.html
@@ -4,30 +4,64 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <input type="number" nbInput fullWidth formControlName="numDelegation"
-                            placeholder="Número de delegación"
-                            [status]="(numDelegation?.errors?.required || numDelegation?.hasError('minlength') || numDelegation?.hasError('maxlength') || numDelegation?.hasError('pattern')) && numDelegation.touched ? 'danger' : ''">
+                        <input type="number" nbInput fullWidth formControlName="id"
+                            placeholder="Número Departamento"
+                            [status]="(id?.errors?.required || id?.hasError('minlength') || id?.hasError('maxlength') || id?.hasError('pattern')) && id.touched ? 'danger' : ''">
                         <ngx-validation-message label="Número de delegación"
-                            [showMinLength]="numDelegation?.hasError('minlength')"
-                            [showMaxLength]="numDelegation?.hasError('maxlength')"
-                            [showRequired]="numDelegation?.errors?.required && numDelegation.touched"
-                            [showPattern]="numDelegation?.hasError('pattern') && numDelegation.touched" minLength=1
+                            [showMinLength]="id?.hasError('minlength')"
+                            [showMaxLength]="id?.hasError('maxlength')"
+                            [showRequired]="id?.errors?.required && id.touched"
+                            [showPattern]="id?.hasError('pattern') && id.touched" minLength=1
                             maxLength=255>
                         </ngx-validation-message>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <input type="number" nbInput fullWidth formControlName="numSubDelegation"
-                            placeholder="Número sub delegación"
-                            [status]="(numSubDelegation?.errors?.required || numSubDelegation?.hasError('minlength') || numSubDelegation?.hasError('maxlength') || numSubDelegation?.hasError('pattern')) && numSubDelegation.touched ? 'danger' : ''">
-                        <ngx-validation-message label="Número sub delegación"
-                            [showMinLength]="numSubDelegation?.hasError('minlength')"
-                            [showMaxLength]="numSubDelegation?.hasError('maxlength')"
-                            [showRequired]="numSubDelegation?.errors?.required && numSubDelegation.touched"
-                            [showPattern]="numSubDelegation?.hasError('pattern') && numSubDelegation.touched"
+                        <input formControlName="detailDelegation" type="text" id="noDelegation"
+                            placeholder="Nro delegacion" [nbAutocomplete]="auto" nbInput fullWidth
+                            [status]="(detailDelegation?.errors?.required || detailDelegation?.hasError('minlength') || detailDelegation?.hasError('maxlength') || detailDelegation?.hasError('pattern')) && detailDelegation.touched ? 'danger' : ''">
+
+                        <nb-autocomplete #auto [activeFirst]="true"
+                            (selectedChange)="onSelectionChangeDelegation($event)">
+
+                            <nb-option *ngFor="let option of filteredOptions$ | async" [value]="option">
+
+                                {{ option.description }}
+                            </nb-option>
+
+                        </nb-autocomplete>
+                        <ngx-validation-message label="Nro delegacion"
+                            [showMinLength]="detailDelegation?.hasError('minlength')"
+                            [showMaxLength]="detailDelegation?.hasError('maxlength')"
+                            [showRequired]="detailDelegation?.errors?.required && detailDelegation.touched"
+                            [showPattern]="detailDelegation?.hasError('pattern') && detailDelegation.touched"
                             minLength=1 maxLength=255>
                         </ngx-validation-message>
+
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input formControlName="detailSubDelegation" placeholder="Nro subdelegacion"
+                            [nbAutocomplete]="subDelegation" nbInput fullWidth
+                            [status]="(detailSubDelegation?.errors?.required || detailSubDelegation?.hasError('minlength') || detailSubDelegation?.hasError('maxlength') || detailSubDelegation?.hasError('pattern')) && detailSubDelegation.touched ? 'danger' : ''">
+                        <nb-autocomplete #subDelegation [activeFirst]="true"
+                            (selectedChange)="onSelectionChangeSubdelegation($event)">
+
+                            <nb-option *ngFor="let option of filteredsubdelegations$ | async" [value]="option">
+                                {{ option.description }}
+                            </nb-option>
+
+                        </nb-autocomplete>
+                        <ngx-validation-message label="Nro subdelegacion"
+                            [showMinLength]="detailSubDelegation?.hasError('minlength')"
+                            [showMaxLength]="detailSubDelegation?.hasError('maxlength')"
+                            [showRequired]="detailSubDelegation?.errors?.required && detailSubDelegation.touched"
+                            [showPattern]="detailSubDelegation?.hasError('pattern') && detailSubDelegation.touched"
+                            minLength=1 maxLength=255>
+                        </ngx-validation-message>
+
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -43,25 +77,13 @@
                         </ngx-validation-message>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input type="text" nbInput fullWidth formControlName="description" maxlength="200"
-                            placeholder="Descripción"
-                            [status]="(description?.errors?.required || description?.hasError('minlength') || description?.hasError('maxlength') || description?.hasError('pattern')) && description.touched ? 'danger' : ''">
-                        <ngx-validation-message label="Descripcion" [showMinLength]="description?.hasError('minlength')"
-                            [showMaxLength]="description?.hasError('maxlength')"
-                            [showRequired]="description?.errors?.required && description.touched"
-                            [showPattern]="description?.hasError('pattern') && description.touched" minLength=1
-                            maxLength=255>
-                        </ngx-validation-message>
-                    </div>
-                </div>
+                
                 <div class="col-md-6">
                     <div class="form-group">
                         <input type="number" nbInput fullWidth formControlName="lastOffice"
-                            placeholder="CVE zona contrato"
+                            placeholder="Ultimo Oficio"
                             [status]="(lastOffice?.errors?.required || lastOffice?.hasError('minlength') || lastOffice?.hasError('maxlength') || lastOffice?.hasError('pattern')) && lastOffice.touched ? 'danger' : ''">
-                        <ngx-validation-message label="CVE zona contrato"
+                        <ngx-validation-message label="Ultimo Oficio"
                             [showMinLength]="lastOffice?.hasError('minlength')"
                             [showMaxLength]="lastOffice?.hasError('maxlength')"
                             [showRequired]="lastOffice?.errors?.required && lastOffice.touched"
@@ -128,6 +150,19 @@
                             [showMaxLength]="phaseEdo?.hasError('maxlength')"
                             [showRequired]="phaseEdo?.errors?.required && phaseEdo.touched"
                             [showPattern]="phaseEdo?.hasError('pattern') && phaseEdo.touched" minLength=1 maxLength=255>
+                        </ngx-validation-message>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <textarea type="text" nbInput fullWidth formControlName="description" maxlength="200"
+                            placeholder="Descripción"
+                            [status]="(description?.errors?.required || description?.hasError('minlength') || description?.hasError('maxlength') || description?.hasError('pattern')) && description.touched ? 'danger' : ''"></textarea>
+                        <ngx-validation-message label="Descripcion" [showMinLength]="description?.hasError('minlength')"
+                            [showMaxLength]="description?.hasError('maxlength')"
+                            [showRequired]="description?.errors?.required && description.touched"
+                            [showPattern]="description?.hasError('pattern') && description.touched" minLength=1
+                            maxLength=255>
                         </ngx-validation-message>
                     </div>
                 </div>
