--- a/src/app/pages/executive-processes/destruction-authorization/destruction-authorization-list/destruction-authorization-list.component.html
+++ b/src/app/pages/executive-processes/destruction-authorization/destruction-authorization-list/destruction-authorization-list.component.html
@@ -1,1 +1,239 @@
-<p>destruction-authorization-list works!</p>
+<nb-card class="cat-card"> 
+
+          <nb-card-header>AUTORIZACIÓN DE BIENES PARA DESTRUCCIÓN</nb-card-header>
+          
+    <nb-card-body>
+
+            <div class="row">
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label for="" class="label">No. Expediente</label>
+                  <input type="text" nbInput fullWidth id="" placeholder="">
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label for="" class="label">Averig Previa</label>
+                  <input type="text" nbInput fullWidth id="" placeholder="">
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label for="" class="label">Causa Penal</label>
+                  <input type="text" nbInput fullWidth id="" placeholder="">
+                </div>
+              </div>
+
+            </div>
+
+            <div class="row">
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label for="" class="label">Acta Circuns</label>
+                  <input type="" nbInput fullWidth id="" placeholder="">
+                </div>
+              </div>
+
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <label for="" class="label">Toca Penal</label>
+                  <input type="text" nbInput fullWidth id="" placeholder="">
+                </div>
+              </div>
+
+              <div class="col-md-4">
+
+                <div class="form-group right">
+                  <label for="" class="label">&nbsp;</label>
+                  <button fullWidth type="submit" nbButton status="primary">Agregar Bienes</button>
+                </div>
+              </div>
+              
+            </div>
+
+    </nb-card-body>
+
+</nb-card>
+
+<nb-card class="cat-card"> 
+  
+  <nb-card-body>
+
+    <div class="row">
+
+      <div class="col-md-2">
+        <div class="form-group">
+          <label for="" class="label">No.</label>
+          <input type="" nbInput fullWidth id="" placeholder="">
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="" class="label">Oficio de Autorización</label>
+          <input type="" nbInput fullWidth id="" placeholder="">
+        </div>
+      </div>
+
+      <div class="col-md-2">
+        <div class="form-group">
+            <label class="label">Fecha recepción del:</label>
+            
+              <input nbInput
+                     placeholder="Selección de fecha"
+                     [nbDatepicker]="formpicker">
+              <nb-datepicker #formpicker></nb-datepicker>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="form-group right">
+          <label for="" class="label">&nbsp;</label>
+          <button fullWidth type="submit" nbButton>abrir</button>
+        </div>
+      </div>
+
+    </div>
+ 
+   
+        <ng2-smart-table class="my-table" [settings]="settings" [source]="data" (deleteConfirm)="onDeleteConfirm($event)"></ng2-smart-table>
+     
+        <div class="row">
+
+          <div class="col-md-2">
+            <div class="form-group">
+              <label for="" class="label">&nbsp;</label>
+              <input type="" nbInput fullWidth id="" placeholder="Estado del bien:">
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="form-group">
+              <nb-radio-group status="success" [(value)]="radioGroupValue">
+                <nb-radio 
+                  [value]="'Disponible'">
+                  Disponible
+                </nb-radio>
+                <nb-radio
+                  [value]="'No Disponible'">
+                  No Disponible
+                </nb-radio>
+                </nb-radio-group>
+            </div>
+
+          </div>
+          
+          <div class="col-md-6 ">
+            <div class="form-group right">
+              <label for="" class="label">&nbsp;</label>
+              <button type="submit" nbButton>Insertar vía Archivo plano</button>
+          </div>
+
+
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-2">
+          <div class="form-group">
+            <label for="" class="label">Folio de escaneo</label>
+            <input type="" nbInput fullWidth id="" placeholder="Folio de escaneo">
+          </div>
+        </div>
+
+        <div class="col-md-1">
+          <div class="form-group">
+            
+                <label for="" class="label">&nbsp;</label>
+                <button fullWidth type="submit" nbButton status="info">Solicitud</button>
+
+          </div>
+        </div>
+
+        <div class="col-md-1">
+          <div class="form-group">
+            
+                <label for="" class="label">&nbsp;</label>
+                <button fullWidth type="submit" nbButton status="info">Escanear</button>
+
+          </div>
+        </div>
+
+        <div class="col-md-1">
+          <div class="form-group">
+            
+                <label for="" class="label">&nbsp;</label>
+                <button fullWidth type="submit" nbButton status="info">Ver IMG</button>
+
+          </div>
+        </div>
+        
+        <div class="col-md-2">
+          <div class="form-group">
+            <label for="" class="label">Folio de cancelación</label>
+            <input type="" nbInput fullWidth id="" placeholder="Folio de escaneo">
+          </div>
+        </div>
+
+        <div class="col-md-1">
+          <div class="form-group">
+            
+                <label for="" class="label">&nbsp;</label>
+                <button fullWidth type="submit" nbButton status="info">Solicitud</button>
+
+          </div>
+        </div>
+
+        <div class="col-md-1">
+          <div class="form-group">
+            
+                <label for="" class="label">&nbsp;</label>
+                <button fullWidth type="submit" nbButton status="info">Escanear</button>
+
+          </div>
+        </div>
+
+        <div class="col-md-1">
+          <div class="form-group">
+            
+                <label for="" class="label">&nbsp;</label>
+                <button fullWidth type="submit" nbButton status="info">Ver IMG</button>
+
+          </div>
+        </div>
+
+        
+
+      </div>
+
+      
+      
+   
+          
+
+  </nb-card-body>
+
+</nb-card>
+
+
+
+<!--
+<div class="row">
+
+  <nb-layout>
+
+    <nb-layout-column>
+      <ng2-smart-table class="my-table" [settings]="settings" [source]="data"></ng2-smart-table>
+    </nb-layout-column>
+
+  </nb-layout>
+
+</div>
+-->
+
+
